<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RControl</string>
    <string name="play_pause">Play/Pause</string>
    <string name="go_forward"><![CDATA[-->]]></string>
    <string name="go_backward"><![CDATA[<--]]></string>
    <string name="vol_more">+</string>
    <string name="vol_less">-</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    

</resources>
